update new with db Main new no file